--- a/src/app/modules/shared/components/sidenav/sidenav.component.html
+++ b/src/app/modules/shared/components/sidenav/sidenav.component.html
@@ -20,7 +20,7 @@
 
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
+                        <button mat-menu-item (click)="logout()">
                         <mat-icon>exit_to_app</mat-icon>
                         Cerrar Sesión
 
@@ -46,8 +46,8 @@
                 <!--profile-->
                 <div class="profile-card">
                     <div class="header">
-                        <h2>Isaias Cardena</h2>
-                        <h2>joiscadz@gmail.com</h2>
+                        <h2>{{username}}</h2>
+
                     </div>
                 </div>
                 <mat-divider></mat-divider>
