--- a/src/app/modules/product/product/product.component.html
+++ b/src/app/modules/product/product/product.component.html
@@ -69,7 +69,7 @@
                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
                 <td mat-cell *matCellDef="let element; let i=index;">
 
-                    <button mat-icon-button color="accent" (click)="edit(element.id, element.name, element.price, element.account, element.category)">
+                    <button *ngIf="isAdmin" mat-icon-button color="accent" (click)="edit(element.id, element.name, element.price, element.account, element.category)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
 
