exportar reportes y graficos

--- a/src/app/modules/components/category/category.component.html
+++ b/src/app/modules/components/category/category.component.html
@@ -14,7 +14,12 @@
         <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
             <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
+
                     <button mat-raised-button color="primary" (click)="openCategoryDialog()">Agregar categoria</button>
+                </li>
+                <li>
+                    <button mat-raised-button color="primary" (click)="exportExcel()">Exportar Excel</button>
+
                 </li>
             </ul>
         </div>
