--- a/src/app/modules/dashboard/components/home/home.component.html
+++ b/src/app/modules/dashboard/components/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<div class="grafico">
+    <p>Bienvenidos</p>
+    <!--doughnut-->
+    <div class="chartContainer">
+        <canvas id="canvas-doughnut" width="400" height="400">
+            {{chartDoughnut}}
+
+        </canvas>
+    </div>
+
+    <!--bar-->
+    <div class="chartContainer">
+        <canvas id="canvas-bar" width="400" height="400">
+            {{chartBar}}
+
+        </canvas>
+    </div>
+
+</div>>
