--- a/src/app/modules/product/product/product.component.html
+++ b/src/app/modules/product/product/product.component.html
@@ -17,6 +17,10 @@
                 <li>
                     <button mat-raised-button color="primary" (click)="openProductDialog()">Agregar Producto</button>
                 </li>
+                <li>
+                    <button mat-raised-button color="primary" (click)="exportExcel()">Exportar Excel</button>
+
+                </li>
             </ul>
 
         </div>
